Added function to build SEO text from given keywords list
